# mavkit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
.github/workflows/: ci.yml  publish-python.yml  publish.yml  sitl.yml
examples/: connect_tcp.rs  connect_udp.rs  list_modes.rs  mission_upload_download.rs  monitor_link_state.rs  monitor_statustext.rs  monitor_telemetry.rs  params_roundtrip.rs  params_write.rs  set_mode_and_arm.rs  tlog_parse.rs  tlog_record.rs
mavkit-macros/: Cargo.toml
mavkit-macros/src/: lib.rs
mavkit-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
mavkit-python/examples/: connect_tcp.py  connect_udp.py  list_modes.py  mission_upload_download.py  monitor_link_state.py  monitor_statustext.py  monitor_telemetry.py  params_roundtrip.py  params_write.py  raw_messages.py  set_mode_and_arm.py  tlog_parse.py
mavkit-python/mavkit/: __init__.py  __init__.pyi
mavkit-python/src/: ardupilot.rs  config.rs  enums.rs  error.rs  geo.rs  guided.rs  info.rs  lib.rs  link.rs  macros.rs  mission.rs  modes.rs  params.rs  raw_message.rs  state.rs  support.rs  telemetry.rs  tlog.rs  vehicle.rs
mavkit-python/src/mission/commands/: dispatch.rs
mavkit-python/src/telemetry/: sensor_health.rs
mavkit-python/src/vehicle/: stored_plans.rs
mavkit-python/tests/: test_ardupilot.py  test_examples.py  test_info.py  test_marshaling.py  test_mission.py  test_modes.py  test_params.py  test_support.py  test_telemetry.py  test_vehicle_api.py
scripts/: check_tag_version.py  wait_tcp.py  wait_udp_telemetry.py
src/: ble_transport.rs  command.rs  config.rs  error.rs  event_loop.rs  fence.rs  geo.rs  info.rs  lib.rs  link.rs  modes.rs  observation.rs  operation.rs  protocol_scope.rs  rally.rs  raw.rs  shared_state.rs  state.rs  stored_plan.rs  stream.rs  stream_connection.rs  support.rs  test_support.rs  types.rs  vehicle.rs
src/ardupilot/: domain.rs  handle.rs  mag_cal.rs  mod.rs  tests.rs
src/ardupilot/guided/: copter.rs  mod.rs  plane.rs  rover.rs  session.rs  sub.rs
src/event_loop/: commands.rs  dispatcher.rs  init.rs  mission.rs  mod.rs  params.rs  state_update.rs  test_support.rs  tests.rs
src/event_loop/mission/: convert.rs  download.rs
src/fence/: handle.rs  state.rs
src/info/: domain.rs  handle.rs  logic.rs  mod.rs  types.rs
src/mission/: domain.rs  handle.rs  mod.rs  operations.rs  runner.rs  test_support.rs  transfer.rs  types.rs  validation.rs  wire.rs
src/mission/commands/: condition.rs  do_commands.rs  mod.rs  nav.rs  wire_support.rs
src/mission/commands/tests/: condition.rs  core.rs  do_commands.rs  macro_generated.rs  nav.rs
src/modes/: domain.rs
src/observation/: backing.rs  subscription.rs  tests.rs  typed.rs
src/params/: file.rs  handle.rs  mod.rs  operations.rs  types.rs
src/raw/: subscription.rs  tests.rs  types.rs
src/telemetry/: handles.rs  messages.rs  mod.rs  sensor_health.rs  status_text.rs  types.rs  values.rs
src/telemetry/handles/: backing.rs  namespace.rs
src/telemetry/messages/: backing.rs  mod.rs  namespace.rs  request_handles.rs  tests.rs
src/tlog/: file.rs  mod.rs  reader.rs  writer.rs
src/vehicle/: actions.rs  lifecycle.rs  mod.rs
src/vehicle/tests/: actions.rs  lifecycle.rs
tests/: sitl_commands.rs  sitl_identity.rs  sitl_mission.rs  sitl_modes.rs  sitl_params.rs  sitl_raw.rs  sitl_roundtrip.rs  sitl_support.rs  sitl_telemetry.rs
tests/common/: mod.rs
