[workspace]
members = [".", "mavkit-python"]

[package]
name = "mavkit"
version = "0.2.0"
authors = [
    "Alexander Averyanov"
]
edition = "2024"
description = "Async MAVLink SDK for vehicle control, missions, and parameters"
license = "MIT"
readme = "README.md"
repository = "https://github.com/averyanalex/mavkit"
homepage = "https://github.com/averyanalex/mavkit"
documentation = "https://docs.rs/mavkit"
keywords = ["mavlink", "uav", "drone", "ardupilot"]
categories = ["aerospace", "asynchronous", "api-bindings"]

[features]
default = ["udp", "serial", "ardupilot"]
udp = ["mavlink/udp"]
tcp = ["mavlink/tcp"]
serial = ["mavlink/direct-serial"]
ardupilot = []
stream = ["async-trait", "futures"]

[dependencies]
mavlink = { version = "0.17", features = ["tokio-1", "emit-extensions"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
num-traits = "0.2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
