[workspace]
members = [".", "mavkit-python"]

[package]
name = "mavkit"
version = "0.4.0"
edition = "2024"
description = "Async MAVLink SDK for vehicle control, missions, and parameters"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AveryanAlex/mavkit"
homepage = "https://github.com/AveryanAlex/mavkit"
documentation = "https://docs.rs/mavkit"
keywords = ["mavlink", "uav", "drone", "ardupilot"]
categories = ["aerospace", "asynchronous", "api-bindings"]

[features]
default = ["udp", "serial", "ardupilot"]
udp = ["mavlink/udp"]
tcp = ["mavlink/tcp"]
serial = ["mavlink/direct-serial"]
ardupilot = []
stream = ["async-trait", "futures"]
tlog = ["tokio/fs", "tokio/io-util"]

[dependencies]
mavlink = { version = "0.17", default-features = false, features = ["all", "std", "serde", "format-generated-code", "tokio-1", "emit-extensions"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
num-traits = "0.2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
async-trait = "0.1"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "tlog_parse"
required-features = ["tlog"]

[[example]]
name = "connect_tcp"
required-features = ["tcp"]

[[example]]
name = "tlog_record"
required-features = ["tlog", "udp"]
