[package]
name = "mavkit-python"
version = "0.3.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "mavkit"
crate-type = ["cdylib"]

[dependencies]
mavkit = { path = "..", features = ["tlog"] }
serde_json = "1"
pyo3 = "0.28"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread"] }
mavlink = { version = "0.17", features = ["emit-extensions"] }
num-traits = "0.2"
