[package]
name = "mavkit-python"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[features]
test-support = []

[lib]
name = "mavkit"
crate-type = ["cdylib"]

[dependencies]
mavkit = { path = "..", features = ["tlog", "tcp"] }
serde_json = "1"
pyo3 = "0.28"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread"] }
tokio-stream = "0.1"
mavlink = { version = "0.17", default-features = false, features = ["all", "std", "serde", "format-generated-code", "emit-extensions"] }
num-traits = "0.2"
