[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mavkit"
version = "0.3.0"
description = "Python bindings for mavkit – Async MAVLink SDK"
license = { text = "MIT" }
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[dependency-groups]
dev = ["maturin>=1.7,<2.0", "ruff>=0.11"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
