[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mavkit"
version = "0.4.0"
description = "Python bindings for mavkit – Async MAVLink SDK"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[dependency-groups]
dev = ["maturin>=1.7,<2.0", "ruff>=0.11", "pytest>=8.0"]

[tool.maturin]
features = ["pyo3/extension-module", "test-support"]
python-source = "."
